--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@kurohyou/k-scaffold-initializer",
+  "name": "@kurohyou/k-init",
   "version": "1.0.0",
   "description": "<div id=\"top\"></div>\r <span align=\"center\">",
   "main": "index.js",
