--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kurohyou/k-init",
-  "version": "2.2.0",
+  "version": "2.3.0",
   "description": "<div id=\"top\"></div>\r <span align=\"center\">",
   "main": "index.js",
   "scripts": {
@@ -27,6 +27,7 @@
   "homepage": "https://github.com/Kurohyou-Studios/K-scaffold-initializer#readme",
   "dependencies": {
     "colors": "^1.4.0",
+    "i18nreplacer": "file:../i18nReplacer",
     "inquirer": "^8.2.3",
     "require-text": "^0.0.1"
   },
